Fix extra padding

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ h4 {
   width: 100%;
   padding: 5px 0;
 }
+
 .nav-sec {
   background-color: #e2136e;
 }
@@ -464,7 +465,7 @@ h4 {
   z-index: 1;
   margin-top: -50px;
   background-color: #e4b7cc;
-  padding: 70px 0;
+  padding: 70px 0 20px 0;
 }
 
 .img-gall-wrapper {
@@ -490,7 +491,7 @@ h4 {
 
 .transection {
   background-color: #e4b7cc;
-  padding: 100px;
+  padding: 30px 0;
 }
 
 .trans-h2 {
